# plaid2text

./: README.org  pyproject.toml  requirements.txt  setup.py
plaid2text/: __init__.py  config_manager.py  storage_manager.py
src/python/plaid2text/: api.py  config_manager.py  link_http_server.py  online_accounts.py
